# nvr

./: .gitignore  .gitmodules  Makefile  README.md  single-drive-current.py
c/: Makefile  nvr.c
c_fork_only_with_ffmpeg/: nvr.c
c_ng/: Makefile  nvr.c
c_pthread_only_with_libav/: Makefile  nvr.c
c_pthread_only_with_libav/include/: camera.h  help.h  mux.h  print.h  storage.h  version.h
c_pthread_only_with_libav/src/: camera.c  help.c  main.c  mkdir.c  mux.c  print.c  storage.c
c_pthread_only_with_libffmpeg/: Makefile
c_pthread_only_with_libffmpeg/include/: argsep.h  camera.h  common.h  mkdir.h  mux.h  storage.h
c_pthread_only_with_libffmpeg/src/: argsep.c  help.c  main.c  version.c
cpp/: nvr.cpp
cpp_fork_only_with_ffmpeg/: Makefile  nvr.cpp
python/: double-hourly-new.py  single-drive-layered.py
python_subprocess_only/: nvr.py
rust_ffmpeg/: Cargo.toml  nvr.yaml
rust_ffmpeg/src/: camera.rs  config.rs  error.rs  ffmpeg.rs  main.rs  storage.rs
