[package]
name = "nvr"
version = "0.1.0"
edition = "2021"

[dependencies]
# chrono = "0.4.24"
ffmpeg-next = "6.0.0"
nix = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3.20", features = ["formatting", "local-offset"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html